# FaultyStorage

./: .gitignore  Algorithms.cpp  Algorithms.hpp  CMakeLists.txt  Utility.cpp  Utility.hpp  main.cpp  testMain.cpp
DangerZone/: test.txt
TestData/: LargeTextFile  SmallTextFile
